--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -46,10 +46,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a style="font-weight: bold;" href="#!">Manage</a>
+                        <a style="font-weight: bold;" href="#!">IDK1</a>
                     </li>
                     <li>
-                        <a style="font-weight:bold;" href="#">Update</a>
+                        <a style="font-weight:bold;" href="#">IDK2</a>
                     </li>
                 </ul>
             </div>
@@ -62,12 +62,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Main Operations</h1>
+                <h1>IDK3</h1>
                 <p class="lead">Request Management</p>
                 <div class="input-group">
-                   <input id='client-text' type="text" name="q" style="width:100%" placeholder="Input Data Field for Web Sockets" class="form-control">
+                   <input id='client-text' type="text" name="q" style="width:100%" placeholder="This does nothing!" class="form-control">
                    <span class="input-group-btn">
-                        <input type="submit" class="btn btn-default" id='issue-socket' value="Submit" onclick="generate_socket()" />
+                        <input type="submit" class="btn btn-default" id='issue-socket' value="Submit" />
                    </span>
                 </div>
             </div>
@@ -80,24 +80,3 @@
         </div>
     </div>
 
-<script>
-    function generate_socket() {
-        var url = window.location.host;
-        var ws = new WebSocket('ws://' + url + '/websocket');
-        ws.onopen = function () {
-            ws.send($("#client-text").val());
-            $("#client-text").val("");
-        };
-        ws.onmessage = function (message) {
-            $("#holder").append($("<p>").text(message.data));
-            $("#holder").css("display","block");
-        }
-    }
-    $(document).ready(function() {
-        $("#client-text").keypress(function(e) {
-            if (e.keyCode == 13) {
-                $("#issue-socket").click();
-            }
-        });
-    });
-</script>
