--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -80,3 +80,19 @@
         </div>
     </div>
 
+
+    
+    <div class="map-grid">
+        <iframe
+          frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/streetview?key=AIzaSyC7yf2Z1mebDybpIbTb5bYzaU5G1XDnotc&location=37.872444, -122.257962&heading=180&pitch=30&fov=90"
+          allowfullscreen>
+        </iframe>
+        <style scoped>
+            iframe {
+                width: 100%;
+                height:500px;
+            }
+        </style>
+    </div>
+
