--- a/templates/html/kill_me.html
+++ b/templates/html/kill_me.html
@@ -68,12 +68,19 @@
       <button onclick="changeOpacity()">Change opacity</button>
     </div>
     <div id="map"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW_4CFPF1EnAUoksk5Pwq1hex0cYLDqqk&libraries=visualization&callback=initMap">
+    <script>
 
       // This example requires the Visualization library. Include the libraries=visualization
       // parameter when you first load the API. For example:
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=visualization">
-
+    function getPoints(coords) {
+        // Define the LatLng coordinates for the polygon's path.
+        let triangleCoords = [];
+        for (let i = 0; i < coords.length; i++) {
+            triangleCoords.push(new google.maps.LatLng(coords[i][0], coords[i][1]));
+        }
+        return triangleCoords;
+    }
 
       function initMap() {
         $.ajax({
@@ -85,8 +92,6 @@
             vals = JSON.parse(j);
             console.log(vals);
 
-            const coords = vals;
-
             var map, heatmap;
 
             map = new google.maps.Map(document.getElementById('map'), {
@@ -96,28 +101,12 @@
             });
 
             heatmap = new google.maps.visualization.HeatmapLayer({
-                data: getPoints(),
+                data: getPoints(vals),
                 map: map
             });
 
-            function getPoints() {
-                // Define the LatLng coordinates for the polygon's path.
-                    let triangleCoords = [];
-                    for (let i = 0; i < coords.length; i++) {
-
-                        triangleCoords.push(new google.maps.LatLng(coords[i][0], coords[i][1]));
-                    }
-                    return triangleCoords;
-                }
-
-
         });
-
-
-
       }
-
-
 
       function toggleHeatmap() {
         heatmap.setMap(heatmap.getMap() ? null : map);
@@ -153,17 +142,11 @@
 
 
 
-
-
-
-    });
-
-
-
-
-
-
     </script>
+
+  <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW_4CFPF1EnAUoksk5Pwq1hex0cYLDqqk&libraries=visualization&callback=initMap">
+  </script>
 
 
 
